[package]
name = "rusty-daw-plugin-host"
version = "0.0.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["plugin", "host", "lv2", "vst", "au"]
categories = ["multimedia::audio"]
description = "Audio plugin hosting for RustyDAW projects (placeholder)"
documentation = "https://docs.rs/rusty-daw-plugin-host"
repository = "https://github.com/RustyDAW/rusty-daw-plugin-host"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
